develop / add text and imageView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Jesuitas</string>
+    <string name="app_name" translatable="false">Jesuitas</string>
+    <string name="msgLikeIt">¡I Like It!</string>
 </resources>
