--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="msgLikeIt">¡Me gusta!</string>
-    <string name="shoolLogoDescription">Logo del Instituto</string>
-    <string name="emailiconDescription">Icono de email</string>
-    <string name="likeIconDescription">Icono de like</string>
-    <string name="gpsIconDescription">Icono de GPS</string>
-
+    <string name="app_name">Pedidos</string>
+    <string name="order">PEDIR</string>
+    <string name="order_summary">RESUMEN DE PEDIDO</string>
+    <string name="plus">+</string>
+    <string name="cantidad">2</string>
+    <string name="less">-</string>
+    <string name="quantity">CANTIDAD</string>
+    <string name="chocolate">Chocolate</string>
+    <string name="whipped_cream">Nata Montada</string>
+    <string name="topping">INGREDIENTES</string>
+    <string name="hint">Introduce tu nombre</string>
 </resources>
