develop / start Codelab 1.10

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Pedidos</string>
-    <string name="order">PEDIR</string>
-    <string name="order_summary">RESUMEN DE PEDIDO</string>
-    <string name="plus">+</string>
-    <string name="cantidad">0</string>
-    <string name="less">-</string>
-    <string name="quantity">CANTIDAD</string>
-    <string name="chocolate">Chocolate</string>
-    <string name="whipped_cream">Nata Montada</string>
-    <string name="topping">INGREDIENTES</string>
-    <string name="hint">Introduce tu nombre</string>
+    <string name="app_name">Dos Actividades</string>
+    <string name="btnSendStr">ENVIAR</string>
+    <string name="LOG_MSG">Botón clicado</string>
+    <string name="message_recieved">Mensaje Recibido</string>
 </resources>
