--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Dos Actividades</string>
-    <string name="btnSendStr">ENVIAR</string>
+    <string name="button_main">ENVIAR</string>
     <string name="LOG_MSG">Botón clicado</string>
     <string name="message_recieved">Mensaje Recibido</string>
-    <string name="hint1">Introduce Aquí Tu Mensaje</string>
+    <string name="editText_main">Introduce Aquí Tu Mensaje</string>
+    <string name="button_second">Responder</string>
+    <string name="editText_second">Introduce Aquí Tu Respuesta</string>
+    <string name="text_header_reply">Respuesta Recibida</string>
 </resources>
