--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Implicit Intents Receiver</string>
+    <string name="app_name">E.1.2 Pedidos Con Intents</string>
 </resources>
