--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">E.1.2 Pedidos Con Intents</string>
+
+
+    <!--Seccion de actividad Principal-->
     <string name="order">ORDER</string>
     <string name="order_summary">ORDER SUMMARY</string>
     <string name="plus" translatable="false">+</string>
@@ -10,6 +13,9 @@
     <string name="whipped_cream">Whipped Cream</string>
     <string name="topping">TOPPING</string>
     <string name="hint">Enter your name</string>
+
+
+    <!--Seccion de actividad secundaria-->
     <string name="subjectMailto">Order Confirmation</string>
     <string name="isIt_correct">Is it correct?</string>
     <string name="y">Yes</string>
@@ -19,7 +25,7 @@
     <string name="yourMail">"Your email is "</string>
     <string name="totalPrice">"Total price is "</string>
     <string name="youOrdered">" ,you order "</string>
-    <string name="coffeWith">" coffes with "</string>
+    <string name="coffeWith">" coffes "</string>
     <string name="withCreamAndChocolate">with Wipped Cream and Chocolate</string>
     <string name="withCream">with Wipped Cream</string>
     <string name="withChocolate">with Chocolate</string>
