--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,13 @@
     <string name="donut_order_message">You ordered a donut.</string>
     <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
     <string name="froyo_order_message">You ordered a FroYo.</string>
+    <string name="name_label_text">Name</string>
+    <string name="enter_name_hint">Enter your name</string>
+    <string name="label_address">Address</string>
+    <string name="enter_address_hint">Enter Yout Address</string>
+    <string name="enter_phone_hint">Enter your phone</string>
+    <string name="phone_label">Phone</string>
+    <string name="note_label">Note</string>
+    <string name="enter_a_note">Enter a note</string>
 
 </resources>
