--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">E.2.1.Pedidos</string>
+    <string name="plusBtn">+</string>
+    <string name="lessBtn">-</string>
 </resources>
