--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">E.2.1.Pedidos</string>
     <string name="plusBtn">+</string>
     <string name="lessBtn">-</string>
+    <string name="cafe_conLeche">Café CON LECHE</string>
+    <string name="initCount">0</string>
+    <string name="cafe_solo">Café SOLO</string>
+    <string name="cafe_cortado">Cafe CORTADO</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
