--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,49 @@
 <resources>
-    <string name="app_name">E.2.1.Pedidos</string>
-    <string name="plusBtn">+</string>
-    <string name="lessBtn">-</string>
-    <string name="cafe_conLeche">Café CON LECHE</string>
-    <string name="initCount">0</string>
-    <string name="cafe_solo">Café SOLO</string>
-    <string name="cafe_cortado">Cafe CORTADO</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="delivery_mode">Recoger en Local</string>
-    <string name="delivery_mode0">Reparto a domicilio</string>
-    <string name="delivery_mode_label">Modo de Entrega</string>
-    <string name="selec_hour_label">Selecciona Hora de entrega</string>
-    <string name="select_delivery_date_label">Selecciona Fecha de entrega</string>
+    <string name="app_name">Droid Cafe</string>
+    <string name="action_settings">Settings</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
 
-    <string-array name="phone_array">
-        <item>Casa</item>
-        <item>Trabajo</item>
-        <item>Móvil</item>
-        <item>Otro</item>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="froyo" >FroYo is premium self-serve frozen yogurt</string>
+    <string name="ice_cream_sandwiches" >Ice cream sandwiches have chocolate wafers and vanilla filling</string>
+    <string name="donuts" >Donuts are glazed and sprinkled with candy</string>
+    <string name="intro_text" >Droid Desserts</string>
+
+    <string name="donut_order_message">You ordered a donut.</string>
+    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
+    <string name="froyo_order_message">You ordered a FroYo.</string>
+    <string name="name_label_text">Name</string>
+    <string name="enter_name_hint">Enter your name</string>
+    <string name="label_address">Address</string>
+    <string name="enter_address_hint">Enter Yout Address</string>
+    <string name="enter_phone_hint">Enter your phone</string>
+    <string name="phone_label">Phone</string>
+    <string name="note_label">Note</string>
+    <string name="enter_a_note">Enter a note</string>
+    <string name="delivery_text">Choose a delivery method:</string>
+    <string name="same_day_messenger_service">Same day messenger service</string>
+    <string name="next_day_ground_delivery">Next day ground delivery</string>
+    <string name="pick_up">Pick up</string>
+    <string name="action_settingss">Contact</string>
+    <string name="action_order">Order</string>
+    <string name="action_contact">Contact</string>
+    <string name="action_status">Status</string>
+    <string name="action_favorites">Favorites</string>
+    <string name="action_order_message">You selected Order</string>
+    <string name="action_status_message">You selected Status</string>
+    <string name="action_favorites_message">You selected Favorites</string>
+    <string name="action_contact_message">You selected Contact</string>
+    <string-array name="labels_array">
+        <item>Home</item>
+        <item>Work</item>
+        <item>Mobile</item>
+        <item>Other</item>
     </string-array>
 
 </resources>
