--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyBook</string>
+    <string name="enter_field">Introduce un libro para buscar</string>
+    <string name="not_working">A habido un error</string>
+    <string name="no_results">No hay ningun resultado</string>
 </resources>
